--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: ffm8-converter
     env: python
-    buildCommand: ""
-    startCommand: gunicorn app:app
-    autoDeploy: true
+    buildCommand: pip install -r requirements.txt
+    startCommand: python app.py
+    envVars:
+      - key: PORT
+        value: 10000
